WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
131926
Compile the :root pseudo class and fix a related issue with :nth-child()
https://bugs.webkit.org/show_bug.cgi?id=131926
Summary
Compile the :root pseudo class and fix a related issue with :nth-child()
Benjamin Poulain
Reported
2014-04-20 22:52:17 PDT
Compile the :root pseudo class and fix a related issue with :nth-child()
Attachments
Patch
(11.02 KB, patch)
2014-04-20 23:01 PDT
,
Benjamin Poulain
kling
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2014-04-20 23:01:55 PDT
Created
attachment 229789
[details]
Patch
Andreas Kling
Comment 2
2014-04-20 23:15:08 PDT
Comment on
attachment 229789
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=229789&action=review
r=me I was going to suggest that we add some DRT mechanism to explicitly disable the selector JIT, but I suppose the fact that most ports are building without it means that we are well covered on both code paths for the time being.
> Source/WebCore/cssjit/SelectorCompiler.cpp:1952 > + // Anything modulo 1 is zero. Unless b restrict the range, this does not filter anything out.
restrict -> restricts
> Source/WebCore/cssjit/SelectorCompiler.cpp:1955 > + validSubsetFilters.append(slot);
You can use uncheckedAppend() here.
Benjamin Poulain
Comment 3
2014-04-20 23:27:17 PDT
Committed
r167585
: <
http://trac.webkit.org/changeset/167585
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug